correct close icon alignment in x reference card

--- a/src/components/common/referenceCard/referenceCard.css
+++ b/src/components/common/referenceCard/referenceCard.css
@@ -38,6 +38,9 @@
 }
 .x {
   position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 25px;
   height: 25px;
   top: -10px;
